# -

./: CMakeLists.txt
_Algoritm/: CMakeLists.txt
_Algoritm/_BackTracking/: CMakeLists.txt
_Algoritm/_BackTracking/BT_NQueens/: main.cpp
_Algoritm/_BranchAndBound/: CMakeLists.txt
_Algoritm/_DevideAndConquer/: CMakeLists.txt
_Algoritm/_DynamicPrograming/: CMakeLists.txt
_Algoritm/_Greedy/: CMakeLists.txt
_Algoritm/_Greedy/Greedy_ActivitySelect/: main.cpp
_Algoritm/_Greedy/Greedy_CoinCollection/: CMakeLists.txt  main.cpp
